feat: Added javafx support to java image